--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
+div#root {
+  margin: auto 0;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.profile {
+  width: 300px;
+  padding: 20px;
+  border-radius: 8px;
+  border: 1px grey solid;
+  margin: 20px;
+  position:relative;
+}
+.timer{
+  font-weight: 800;
+  padding:5px;
+  position:absolute;
+  top:0;
+  right:0;
+  color:green;
 }
 
-.App-link {
-  color: #61dafb;
+/* buttons */
+button.add {
+  background: #addbad;
+  font-size: larger;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button.remove {
+  background: #ff000087;
+  font-size: larger;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
 }
